--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <title>14.8. PROJEKT - Wyszukiwarka gifów</title>
+    <title>15.5. Wyszukiwarka gifow - Refaktoryzacja</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
@@ -11,6 +11,7 @@
     <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
     <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
     <script src="https://github.com/babel/babel-standalone/releases/download/release-6.26.0/babel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"></script>
 
     <script>
       var App, Search, Gif
